--- a/client/stylesheets/style.scss
+++ b/client/stylesheets/style.scss
@@ -1,10 +1,22 @@
 @import "~bootstrap/scss/bootstrap";
 
+$nav-theme-color: rgb(0, 0, 130);
 
 .navbar{
-    background-color:#29B675
+    display: flex;
+    justify-content: flex-start;
+    gap: 20px;
+    padding: 1px;
+    text-decoration: none;
+    margin: auto;
+
 };
-    
+
+
+.navbar-about, .navbar-main {
+  text-decoration: none;
+  color: black;
+}
 
 //Parent container for energy orbs
 .orbs-parent{
@@ -74,8 +86,34 @@
       10px 0 80px #0ff;
   }
 
-  .about-container{
+  #about-container{
     display: grid;
+    grid-template-rows: repeat(4, 500px);
+    grid-template-columns: repeat(3, 1fr);
+    background-image: url(../assets/Wind-farm-turbines-WV.jpeg);
   }
+
+  // #goal{
+  //   background-image: url();
+  // }
   
-  
+#goal{
+  grid-area: 1 / 1 / 2 / 4;
+  background-color: red;
+}
+
+.goal-container{
+
+}
+
+#how-we-did-it{
+  grid-area: 2 / 1 / 2 / 4;
+}
+
+#more-info{
+  grid-area: 3 / 1 / 3 / 4;
+}
+
+.paragraph1{
+  grid-area: 1 / 1 / 1 / 1;
+}
