updated styling for main page

--- a/client/stylesheets/style.scss
+++ b/client/stylesheets/style.scss
@@ -4,24 +4,33 @@
 .navbar{
     background-color:#29B675
 };
+
+//Removes spinner control (arrows) from zip code input
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+    -webkit-appearance: none; 
+    margin: 0; 
+}
     
 
 //Parent container for energy orbs
 .orbs-parent{
-    display: flex;
-    flex-wrap: wrap;
-    background-color: #29B675;
-    border: 3px;
-    border-color: red;
+  // position: fixed;
+  display: grid;
+  grid-template-columns: [first] 200px [line2] 200px [line3] 200px;
+  grid-template-rows: [row1] 200px [row2] 200px [row3] 200px;
+  text-align: center;
+  vertical-align: middle;
+  height: 600px;
+  width: 600px;
+  background-color: #29B675;
   }
   
   //style for solar orb resize
-  .solar-orb{
-    position: relative;
-    top: calc(50% - 150px);
-    left: calc(50% - 150px);
-    width: 300px;
-    height: 300px;
+  .temp-orb{
+    justify-self: center;
+    width: 150px;
+    height: 150px;
     resize: both;
     border-radius: 50%;
     box-shadow:
@@ -36,12 +45,10 @@
   }
   
   //style for wind orb resize
-  .wind-orb{
-    position: relative;
-    top: calc(50% - 150px);
-    left: calc(50% - 150px);
-    width: 300px;
-    height: 300px;
+  .humidity-orb{
+    justify-self: center;
+    width: 150px;
+    height: 150px;
     resize: both;
     border-radius: 50%;
     box-shadow:
@@ -56,12 +63,49 @@
   }
   
   //style for rain orb
-  .rain-orb{
-    position: relative;
-    top: calc(50% - 150px);
-    left: calc(50% - 150px);
-    width: 300px;
-    height: 300px;
+  .wind-orb{
+    justify-self: center;
+    width: 150px;
+    height: 150px;
+    resize: both;
+    border-radius: 50%;
+    box-shadow:
+      inset 0 0 50px #fff,
+      inset 20px 0 80px #f0f,
+      inset -20px 0 80px #0ff,
+      inset 20px 0 300px #f0f,
+      inset -20px 0 300px #0ff,
+      0 0 50px #fff,
+      -10px 0 80px #f0f,
+      10px 0 80px #0ff;
+  }
+
+   //style for precip orb
+   .precip-orb{
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: row1;
+    grid-row-end: row2;
+    justify-self: center;
+    width: 150px;
+    height: 150px;
+    resize: both;
+    border-radius: 50%;
+    box-shadow:
+      inset 0 0 50px #fff,
+      inset 20px 0 80px #f0f,
+      inset -20px 0 80px #0ff,
+      inset 20px 0 300px #f0f,
+      inset -20px 0 300px #0ff,
+      0 0 50px #fff,
+      -10px 0 80px #f0f,
+      10px 0 80px #0ff;
+  }
+
+  .cloud-orb{
+    justify-self: center;
+    width: 150px;
+    height: 150px;
     resize: both;
     border-radius: 50%;
     box-shadow:
