scratch project complete

--- a/client/stylesheets/style.scss
+++ b/client/stylesheets/style.scss
@@ -16,7 +16,7 @@ $nav-theme-color: rgb(0, 0, 130);
 }
 
 .body{
-  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', 'Geneva', Verdana, sans-serif;
   color: white;
   display: grid;
   margin-left: 30px;
