--- a/client/stylesheets/style.scss
+++ b/client/stylesheets/style.scss
@@ -44,12 +44,6 @@ input[type=number]::-webkit-outer-spin-button {
     margin: 0; 
 }
 
-.btn-group{
-  background-color: #29B675;
-  max-height: 50px;
-}
-
-
 
 
 //Parent container for energy orbs
@@ -80,7 +74,6 @@ input[type=number]::-webkit-outer-spin-button {
     grid-row-end: row3;
     width: 150px;
     height: 150px;
-    resize: both;
     border-radius: 50%;
     box-shadow:
     inset 0 0 30px #fff,
@@ -103,7 +96,6 @@ input[type=number]::-webkit-outer-spin-button {
     grid-row-end: row3;
     width: 150px;
     height: 150px;
-    resize: both;
     border-radius: 50%;
     box-shadow:
       inset 0 0 30px #fff,
@@ -126,7 +118,6 @@ input[type=number]::-webkit-outer-spin-button {
     grid-row-end: row3;
     width: 150px;
     height: 150px;
-    resize: both;
     border-radius: 50%;
     box-shadow:
     inset 0 0 30px #fff,
@@ -149,7 +140,6 @@ input[type=number]::-webkit-outer-spin-button {
     grid-row-end: row2;
     width: 150px;
     height: 150px;
-    resize: both;
     border-radius: 50%;
     box-shadow:
       inset 0 0 30px #fff,
@@ -171,7 +161,6 @@ input[type=number]::-webkit-outer-spin-button {
     grid-row-end: row3;
     width: 150px;
     height: 150px;
-    resize: both;
     border-radius: 50%;
     box-shadow:
       inset 0 0 30px #fff,
@@ -184,16 +173,7 @@ input[type=number]::-webkit-outer-spin-button {
       10px 0 30px #928dc9;
   }
 
-  .table-container{
-    display: grid;
-    grid-template-rows: repeat(2, 1fx);
-    justify-content: start;
-    grid-column-start: 2;
-    grid-row-start: 1;
-    align-items: center;
-    align-content: center;
-  }
-
+ 
   //ZIP CODE FORM
 .form-group{
   margin-left: 50px;
@@ -204,7 +184,17 @@ input[type=number]::-webkit-outer-spin-button {
   max-width: 500px;
 }
     
-  
+  //TABLES
+  .table-container{
+    display: grid;
+    grid-template-rows: repeat(2, 1fx);
+    justify-content: start;
+    grid-column-start: 2;
+    grid-row-start: 1;
+    align-items: center;
+    align-content: center;
+  }
+
   .table.table-light{
   margin-left: 50px;
   place-self: center;
