--- a/client/stylesheets/style.scss
+++ b/client/stylesheets/style.scss
@@ -3,7 +3,7 @@
 $nav-theme-color: rgb(0, 0, 130);
 
 
-.main{
+.main {
   // display: grid;
   grid-template-columns: 1fr 2fr;
   grid-template-rows: 1fr 1fr;
@@ -12,11 +12,11 @@ $nav-theme-color: rgb(0, 0, 130);
   height: 100vh;
   width: 100vw;
   // background-repeat:no-repeat;
-  
+
 }
 
-.body{
-  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', 'Geneva', Verdana, sans-serif;
+.body {
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', 'Geneva', Verdana, sans-serif;
   color: white;
   display: grid;
   margin-left: 30px;
@@ -25,7 +25,7 @@ $nav-theme-color: rgb(0, 0, 130);
 }
 
 
-.navbar{
+.navbar {
   display: flex;
   justify-content: flex-start;
   height: auto;
@@ -35,33 +35,36 @@ $nav-theme-color: rgb(0, 0, 130);
   margin: auto;
   font-family: 'Ibarra Real Nova', serif;
   font-family: 'Lato', sans-serif;
-};
+}
 
-#about-logo{
+;
+
+#about-logo {
   width: 130px;
   height: 100px;
 }
 
-.navbar-about, .navbar-main{
+.navbar-about,
+.navbar-main {
   text-decoration: none;
   color: black;
 }
 
 //Removes spinner control (arrows) from zip code input
-input[type=number]::-webkit-inner-spin-button, 
-input[type=number]::-webkit-outer-spin-button { 
-    -webkit-appearance: none; 
-    margin: 0; 
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
 
 
 
 //Parent container for energy orbs
-.orbs-parent{
+.orbs-parent {
   background-image: url('https://media4.giphy.com/media/3og0IV7MOCfnm85iRa/giphy.gif?cid=790b761115367520aa6ca01b6a0e35f316f672cf0d8298c0&rid=giphy.gif&ct=g');
   font-family: 'Ibarra Real Nova', serif;
   font-family: 'Lato', sans-serif;
-  font-size:medium;
+  font-size: medium;
   align-self: center;
   display: grid;
   grid-column-start: 1;
@@ -73,121 +76,121 @@ input[type=number]::-webkit-outer-spin-button {
   height: 600px;
   width: 600px;
   border-radius: 20%;
-  border:2px solid black;
-  }
-  
-  //style for solar orb resize
-  .temp-orb{
-    justify-self: center;
-    padding-top: 25px;
-    grid-column-start: 2;
-    grid-column-end: 3;
-    grid-row-start: row2;
-    grid-row-end: row3;
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
-    box-shadow:
+  border: 2px solid black;
+}
+
+//style for solar orb resize
+.temp-orb {
+  justify-self: center;
+  padding-top: 25px;
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: row2;
+  grid-row-end: row3;
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  box-shadow:
     inset 0 0 30px #fff,
-      inset 20px 0 80px #FF4100,
-      inset -20px 0 80px #FFCF63,
-      inset 20px 0 300px #FF4100,
-      inset -20px 0 300px #FFCF63,
-      0 0 10px #fff,
-      -10px 0 30px #FF4100,
-      10px 0 30px #FFCF63;
-  }
-  
-  //style for wind orb resize
-  .humidity-orb{
-    justify-self: center;
-    padding-top: 25px;
-    grid-column-start: 2;
-    grid-column-end: 3;
-    grid-row-start: row3;
-    grid-row-end: row3;
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
-    box-shadow:
-      inset 0 0 30px #fff,
-      inset 20px 0 80px rgb(106, 137, 193),
-      inset -20px 0 80px rgb(119, 129, 146),
-      inset 20px 0 300px rgb(106, 137, 193),
-      inset -20px 0 300px rgb(119, 129, 146),
-      0 0 10px #fff,
-      -10px 0 30px rgb(106, 137, 193),
-      10px 0 30px rgb(119, 129, 146);
-  }
-  
-  //style for rain orb
-  .wind-orb{
-    justify-self: center;
-    padding-top: 25px;
-    grid-column-start: 1;
-    grid-column-end: 2;
-    grid-row-start: row2;
-    grid-row-end: row3;
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
-    box-shadow:
+    inset 20px 0 80px #FF4100,
+    inset -20px 0 80px #FFCF63,
+    inset 20px 0 300px #FF4100,
+    inset -20px 0 300px #FFCF63,
+    0 0 10px #fff,
+    -10px 0 30px #FF4100,
+    10px 0 30px #FFCF63;
+}
+
+//style for wind orb resize
+.humidity-orb {
+  justify-self: center;
+  padding-top: 25px;
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: row3;
+  grid-row-end: row3;
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  box-shadow:
     inset 0 0 30px #fff,
-      inset 20px 0 80px #e5e5e5,
-      inset -20px 0 80px rgb(97, 107, 125),
-      inset 20px 0 300px #e5e5e5,
-      inset -20px 0 300px rgb(97, 107, 125),
-      0 0 10px #fff,
-      -10px 0 30px #e5e5e5,
-      10px 0 30px rgb(97, 107, 125);
-  }
+    inset 20px 0 80px rgb(106, 137, 193),
+    inset -20px 0 80px rgb(119, 129, 146),
+    inset 20px 0 300px rgb(106, 137, 193),
+    inset -20px 0 300px rgb(119, 129, 146),
+    0 0 10px #fff,
+    -10px 0 30px rgb(106, 137, 193),
+    10px 0 30px rgb(119, 129, 146);
+}
 
-   //style for precip orb
-   .precip-orb{
-    justify-self: center;
-    padding-top: 25px;
-    grid-column-start: 2;
-    grid-column-end: 3;
-    grid-row-start: row1;
-    grid-row-end: row2;
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
-    box-shadow:
-      inset 0 0 30px #fff,
-      inset 20px 0 80px #141444,
-      inset -20px 0 80px #a0b6c4,
-      inset 20px 0 300px #141444,
-      inset -20px 0 300px #a0b6c4,
-      0 0 10px #fff,
-      -10px 0 30px #141444,
-      10px 0 30px #a0b6c4;
-  }
+//style for rain orb
+.wind-orb {
+  justify-self: center;
+  padding-top: 25px;
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: row2;
+  grid-row-end: row3;
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  box-shadow:
+    inset 0 0 30px #fff,
+    inset 20px 0 80px #e5e5e5,
+    inset -20px 0 80px rgb(97, 107, 125),
+    inset 20px 0 300px #e5e5e5,
+    inset -20px 0 300px rgb(97, 107, 125),
+    0 0 10px #fff,
+    -10px 0 30px #e5e5e5,
+    10px 0 30px rgb(97, 107, 125);
+}
 
-  .cloud-orb{
-    justify-self: center;
-    padding-top: 25px;
-    grid-column-start: 3;
-    grid-column-end: 3;
-    grid-row-start: row2;
-    grid-row-end: row3;
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
-    box-shadow:
-      inset 0 0 30px #fff,
-      inset 20px 0 80px #6d6d6d,
-      inset -20px 0 80px #928dc9,
-      inset 20px 0 300px #6d6d6d,
-      inset -20px 0 300px #928dc9,
-      0 0 10px #fff,
-      -10px 0 30px #6d6d6d,
-      10px 0 30px #928dc9;
-  }
+//style for precip orb
+.precip-orb {
+  justify-self: center;
+  padding-top: 25px;
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: row1;
+  grid-row-end: row2;
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  box-shadow:
+    inset 0 0 30px #fff,
+    inset 20px 0 80px #141444,
+    inset -20px 0 80px #a0b6c4,
+    inset 20px 0 300px #141444,
+    inset -20px 0 300px #a0b6c4,
+    0 0 10px #fff,
+    -10px 0 30px #141444,
+    10px 0 30px #a0b6c4;
+}
 
- 
-  //ZIP CODE FORM
-.form-group{
+.cloud-orb {
+  justify-self: center;
+  padding-top: 25px;
+  grid-column-start: 3;
+  grid-column-end: 3;
+  grid-row-start: row2;
+  grid-row-end: row3;
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  box-shadow:
+    inset 0 0 30px #fff,
+    inset 20px 0 80px #6d6d6d,
+    inset -20px 0 80px #928dc9,
+    inset 20px 0 300px #6d6d6d,
+    inset -20px 0 300px #928dc9,
+    0 0 10px #fff,
+    -10px 0 30px #6d6d6d,
+    10px 0 30px #928dc9;
+}
+
+
+//ZIP CODE FORM
+.form-group {
   margin-left: 50px;
   margin-top: 80px;
   align-self: start;
@@ -195,53 +198,54 @@ input[type=number]::-webkit-outer-spin-button {
   text-align: center;
   max-width: 500px;
 }
-    
-  //TABLES
-  .table-container{
-    display: grid;
-    grid-template-rows: repeat(2, 1fx);
-    justify-content: start;
-    grid-column-start: 2;
-    grid-row-start: 1;
-    align-items: center;
-    align-content: center;
-  }
 
-  .table.table-light{
+//TABLES
+.table-container {
+  display: grid;
+  grid-template-rows: repeat(2, 1fx);
+  justify-content: start;
+  grid-column-start: 2;
+  grid-row-start: 1;
+  align-items: center;
+  align-content: center;
+}
+
+.table.table-light {
   margin-left: 50px;
   place-self: center;
-  }
+}
 
-  .table.table-dark{
-    margin-left: 50px;
-    margin-top: 20px;
-    grid-column-start: 1;
-    grid-row-start: 2;
-    place-self: center;
-    max-width: 800px;
-    text-align: center;
-  }
-  .thead {
-    font-weight: 400;
-    background: #29B675;
-  }
-  
+.table.table-dark {
+  margin-left: 50px;
+  margin-top: 20px;
+  grid-column-start: 1;
+  grid-row-start: 2;
+  place-self: center;
+  max-width: 800px;
+  text-align: center;
+}
 
-  // #about-container{
-  //   display: grid;
-  //   grid-template-rows: repeat(4, 500px);
-  //   grid-template-columns: repeat(3, 1fr);
-  //   // background-image: url(../assets/Wind-farm-turbines-WV.jpeg);
-  //   height: 100%;
-  //   overflow-x: hidden;
-  // }
+.thead {
+  font-weight: 400;
+  background: #29B675;
+}
 
-.about-page{
+
+// #about-container{
+//   display: grid;
+//   grid-template-rows: repeat(4, 500px);
+//   grid-template-columns: repeat(3, 1fr);
+//   // background-image: url(../assets/Wind-farm-turbines-WV.jpeg);
+//   height: 100%;
+//   overflow-x: hidden;
+// }
+
+.about-page {
   font-family: 'Ibarra Real Nova', serif;
   font-family: 'Lato', sans-serif;
 }
 
-#goal{
+#goal {
   display: grid;
   background-color: black;
   grid-template-columns: repeat(2, 1fr);
@@ -260,25 +264,25 @@ input[type=number]::-webkit-outer-spin-button {
 // .paragraph1{
 //   grid-area: 2 / 1 / 2 / 1;
 // }
-.how-flex{
+.how-flex {
   display: flex;
   align-items: center;
   align-content: center;
 }
 
-.about-turbines-img{
+.about-turbines-img {
   background-color: rgb(160, 209, 247);
   margin: auto;
   height: 500px;
   width: 100%;
 }
 
-#turbines{
+#turbines {
   height: 100%;
   width: 100%;
 }
 
-#how-we-did-it{
+#how-we-did-it {
   grid-area: 2 / 1 / 2 / 4;
   display: grid;
   justify-content: center;
@@ -287,17 +291,24 @@ input[type=number]::-webkit-outer-spin-button {
   margin: auto;
 }
 
-.how-we-did-it-container{
+.how-we-did-it-container {
   grid-area: 1 / 2 / 1 / 2;
 }
 
-#more-info{
+#more-info {
   grid-area: 3 / 1 / 3 / 4;
   display: grid;
   grid-template-columns: 1fr 1fr;
   padding: 30px;
 }
 
-.paragraph1{
+.paragraph1 {
   grid-area: 1 / 1 / 1 / 1;
+}
+
+table,
+th,
+tr {
+  border: 1px solid white;
+  color: white;
 }
