more table format

--- a/client/stylesheets/style.scss
+++ b/client/stylesheets/style.scss
@@ -207,9 +207,9 @@ $nav-theme-color: rgb(0, 0, 130);
   grid-area: 1 / 1 / 1 / 1;
 }
 
-table,
-th,
-tr {
-  border: 1px solid white;
-  color: white;
-}
+// table,
+// th,
+// tr {
+//   border: 1px solid white;
+//   color: white;
+// }
