--- a/client/stylesheets/style.scss
+++ b/client/stylesheets/style.scss
@@ -6,12 +6,11 @@ $nav-theme-color: rgb(0, 0, 130);
 .body{
   font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', 'Geneva', Verdana, sans-serif;
   display: grid;
-  grid-template-columns: 2fr 1fr;
-  grid-template-rows: 1fr 1fr;
+  grid: 1fr 1fr / 1fr 0.75fr;
   height: 100vh;
   width: 100vw;
   background-color: #31AA50;
-  color: white;
+  color: rgb(0, 0, 0);
 }
 
 
@@ -49,11 +48,13 @@ $nav-theme-color: rgb(0, 0, 130);
   grid-row-start: 1;
   place-items: center;
   margin-left: 80px;
-  margin-top: 60px;
+  margin-top: 80px;
   vertical-align: middle;
   height: 200px;
   width: 800px;
-  border:2px solid 	#213C5E;
+  border-radius: 20px;
+  background-color: #FFFFFF;
+  box-shadow: rgba(61, 61, 87, 0.25) 0px 30px 60px -12px inset, rgba(47, 47, 47, 0.3) 0px 18px 36px -18px inset;
   }
   
   //style for temperature orb 
@@ -134,16 +135,71 @@ $nav-theme-color: rgb(0, 0, 130);
       10px 0 30px #a0b6c4;
   }
 
-  //Sate and County Dropdowns
-  .dropdown-container{
-    display: grid;
-    grid-template-rows: repeat(2, 1fx);
-    justify-content: start;
-    grid-column-start: 2;
-    grid-row-start: 1;
-    align-items: center;
-    align-content: center;
+  Sate and County Dropdowns
+  .dropdown-body{
+    place-items: center;
+    
   }
+
+  .stateDrop{
+    text-align: center;
+    display:inline-block;
+    margin-right: 40px;
+    margin-top: 120px;
+    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
+  }
+  
+  #selectState{
+    cursor: pointer;
+  }
+ 
+  .countyDrop{
+    text-align: center;
+    display:inline-block;
+    margin-right: 10px;
+    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
+  }
+
+  #selectCounty{
+    cursor: pointer;
+  }
+
+
+/* CSS */
+button {
+  background-color: #FFFFFF;
+  border: 1px solid rgb(209,213,219);
+  border-radius: .5rem;
+  box-sizing: border-box;
+  color: #111827;
+  // font-family: "Inter var",ui-sans-serif,system-ui,-apple-system,system-ui,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+  font-size: .875rem;
+  font-weight: 600;
+  line-height: 0.75rem;
+  padding: .75rem 1rem;
+  text-align: center;
+  text-decoration: none #D1D5DB solid;
+  // text-decoration-thickness: auto;
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
+  cursor: pointer;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+button:hover {
+  background-color: rgb(249,250,251);
+}
+
+button:focus {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
+.button:focus-visible {
+  box-shadow: none;
+}
+  
 
 
 .about-page{
